--- a/src/components/OnboardingHeader/Onboarding.module.css
+++ b/src/components/OnboardingHeader/Onboarding.module.css
@@ -10,6 +10,7 @@
 .logo {
     width: 6rem;
     padding-top: 3rem;
+    height: intrinsic;
 }
 
 .markering {
